# flask-restful-boilerplate

./: .coveragerc  .flaskenv  .gitignore  .pre-commit-config.yaml  .testenv  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
instance/testing/: application.cfg  logging.yaml
myapi/: app.py  config.py  manage.py  wsgi.py
myapi/apis/: __init__.py
myapi/apis/admin/: __init__.py
myapi/apis/apiv1/: __init__.py
myapi/apis/local/: __init__.py  server_status.py
myapi/apis/public/: __init__.py  server_status.py
myapi/commons/errors/: __init__.py  app_exception.py
myapi/commons/utils/: app_utils.py
myapi/extensions/: __init__.py  apispece_ext.py  flask_resource_plugin.py
myapi/extensions/logger/: __init__.py  logger.py  logger_ext.py
myapi/health/: __init__.py  status.py
myapi/utils/logger/: __init__.py  logger_configurer.py  queue_listener_handler.py
tests/: conftest.py  envvars.py  test_apispec.py  test_cli.py  test_config.py  test_contexts.py  test_metadata.py
tests/test_apis/test_public/: test_status.py
tests/test_commons/test_errors/: test_app_exception.py
tests/test_commons/test_utils/: test_app_utils.py
tests/test_health/: test_status.py
