[metadata]
license_files = LICENSE

[options]
setup_requires =
    wheel==0.36.2
    setuptools-scm==6.0.1

install_requires =
    apispec-webframeworks==0.5.2
    flask-apispec==0.11.0
    Flask-Cors==3.0.10
    Flask-RESTful==0.3.9
    gunicorn==20.1.0
    importlib-metadata;python_version<"3.8"
    logging-extras==0.2.0b0

[options.extras_require]
dev =
    pre-commit>=2.13.0
    python-dotenv>=0.17.1

test =
    flake8>=3.9.2
    openapi-spec-validator==0.3.1
    pytest>=6.2.4
    pytest-cov>=2.12.1
    tox>=3.23.1
